# qmk_firmware

./: .gitignore  pyproject.toml
keyboards/lily58/jz58/: info.json  jz58.c  readme.md
keyboards/lily58/keymaps/jz_default/: config.h  keymap.c  rules.mk
