[tool.poetry]
name = "qmk-firmware"
version = "0.1.0"
description = "my contribution to qmk_firmware"
authors = ["Jason Zondor <jason@zondor.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
qmk = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
